infrastructure-policy/templates/limit-egress.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: limitegresstraffic
  annotations:
    description: Establish external and internal network perimeters and monitor network traffic.
    reference: https://github.com/canada-ca/cloud-guardrails/blob/master/EN/09_Network-Security-Services.md
    related-security-controls: AC-3, AC‑4, SC-5, SC‑7, SC‑7(5), SI-3, SI-3(7), SI-4
spec:
  crd:
    spec:
      names:
        kind: LimitEgressTraffic
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: "\npackage limitegresstraffic\n\nhas_key(obj, field){\n  obj[field]\n}\n\n# Validate GKE Private Instance\nviolation[{\"msg\":msg}] {\n  # Make sure privateClusterConfig exists\n  input.review.kind.kind == \"ContainerCluster\"\n  not has_key(input.review.object.spec, \"privateClusterConfig\")\n  msg := sprintf(\"GKE is not Private %s\", [input.review.object.metadata.name])\n}          \n\n# Ensure Services do not configure External IPs\n# IE Private GKE Cluster\nviolation[{\"msg\":ms [...]
